--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
             rel="stylesheet"
         />
         <link rel="stylesheet" href="./index.css"/>
-        <title>Vite + React + TS</title>
+        <title>Blog on Iterating</title>
     </head>
     <body>
         <div id="root"></div>
